clusters/main/kubernetes/flux-system/weave-gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops
  namespace: flux-system
  annotations:
      cert-manager.io/cluster-issuer: domain-0-le-prod
      cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: internal
  rules:
    - host: gitops.${DOMAIN_0}
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: weave-gitops
              port:
                number: 9001
  tls:
    - hosts:
      - gitops.${DOMAIN_0}
      secretName: weave-gitops-tls-0
